# agentic-document-preserving-rag

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
agentic_rag/: __init__.py  system.py
agentic_rag/core/: __init__.py  agents.py  base.py  coordinator.py  document_manager.py
ai_consulting/: agents.py  main.py  requirements.txt  tasks.py
examples/: basic_usage.py  marine_ecosystem_analysis.py
rag_storage/documents/2024-11-20T14:59:19.101693_1cd19f76fb396ddf/: original
rag_storage/references/2024-11-20T14:59:19.101693_1cd19f76fb396ddf/: metadata.json
test_documents/: climate_impact_synthesis.txt  coral_reef_study.txt  marine_biodiversity_assessment.txt
tests/: __init__.py  test_integration.py  test_system.py
